tests/errors/ty_label_err/ty_label_err.c
#error ty_label_err:5:21 PARSE ERROR: Expected an expression (5:21)
#error ty_label_err:5:21 PARSE ERROR: Expected ')' (5:21)
#error ty_label_err:5:26 PARSE ERROR: Expected eof (5:26)
#error ty_label_err:5:26 PARSE ERROR: Expected an expression (5:26)
